Keep spectator profile mode authoritative